--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,7 +50,6 @@ nav{
       background-color:#0B3860;
       width: 100%;
 }
-
 .logo img{
       height: 3rem;     
 }#features{
@@ -71,15 +70,18 @@ nav{
       min-width: 180px;
       max-width: 230px;
       margin: 0.8rem;
-      padding: 1rem;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       border-radius: 5px;
 }.feature i{
-      font-size: 2.2rem;
+      font-size: 2.5rem;
       margin-bottom: 1.5rem;
+}.feature p{
+      font-size: 1.2rem;
 }.feature-blue{
       background-color: rgba(9, 53, 104, 0.493);
 }.feature-black{
@@ -143,7 +145,7 @@ nav{
       padding: 1rem;
 }.mapa iframe{
       width: 100%;
-}.inf h3{
+}.direccion h3{
 
       font-size: 1.5em;
       display: flex;
@@ -157,7 +159,7 @@ nav{
       width: 50%;
       height: 0.1em;
       
-}.inf{
+}.direccion{
       padding: 2em;
  }.titulo h1{
       margin-bottom: 2%;
@@ -174,7 +176,7 @@ nav{
       height: 100%;
       width: 100%;
 }
-.text.t{
+.texto1{
       width: 25%;
 
       
@@ -188,7 +190,7 @@ nav{
       display:flex;
       padding: 2%;
       
-}.text t3 {
+}.texto3{
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -209,18 +211,20 @@ nav{
       height: 100%;
       border-radius: 50%;
       
-}.ip{
+}.descripcion{
       height: 100%;
 }.icons p{
       margin-left: 2%;
-}#op img{
+}#opinion img{
       width: 16%;
       height: 3.5em;
-}.enc{
+}.encabezado{
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: flex-start;
+      background: url(/img/Group\ 200.svg);
+      background-size: cover;
 
 }.titulo{
       font-size: 1.7em;
@@ -231,25 +235,32 @@ nav{
       color: white;
       height: 7em;
       
- }.ip{
+ }.descripcion{
       position: relative;
       display: flex;
       align-items: center;
-      padding: 3%;
+      padding: 6%;
+      font-size: 1.3em;
       height: 7rem;
- }#op{
-      margin-top: -3%;
+ }#opinion{
+   margin-top: -3%;
    margin-bottom: 3%;
    height: 100%;
-   width: 32em; 
+   width: 400px;
    background: linear-gradient(49.54deg, #337AB7 6%, #0B3860 90.34%);
- }.enc img{
+ }.encabezado img{
       padding: 2%;
  }.estrellas{
       display: flex;
       flex-direction: column;
       justify-content: center;
       padding: 3%;
+ }.red{
+      margin-top: 3%;
+      font-size: 1.3em;
+      width: 50%; 
+      
+
  }
 
  /* resolucion desktop*/
@@ -257,13 +268,13 @@ nav{
       .logo i{
             display: none;
       }
-      .text.t hr{
+      .texto1 hr{
             display: none;
-      }.text.t2 hr{
+      }.texto2 hr{
             display: none;
-      }.text.t3 hr{
+      }.texto3 hr{
         display: none;
-      }.ip{
+      }.descripcion{
             font-size: 1.3em;
       }.features-title{
             font-size: 2em;
@@ -277,13 +288,13 @@ nav{
       }
       .menu hr{
             display: none;
-      }.text.t hr{
+      }.texto1 hr{
             display: none;
-      }.text.t2 hr{
+      }.texto2 hr{
             display: none;
-      }.text.t3 hr{
+      }.texto3 hr{
         display: none;
-      }#op{
+      }#opinion{
             width: 30%;
       }
 }
@@ -355,11 +366,11 @@ nav{
         }.text-footer{
             display: flex;
             flex-direction: column;
-        }.text.t{
+        }.texto1{
             width: 100%;
-        }.text.t2{
+        }.texto2{
             width: 100%;
-        }.text.t3{
+        }.texto3{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -384,9 +395,9 @@ nav{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-        }#op{
+        }#opinion{
             width: 30%;
-        }.ip{
+        }.descripcion{
             font-size: 0.7em;
         }.opiniones{
             overflow: hidden;
