--- a/css/login.css
+++ b/css/login.css
@@ -40,18 +40,17 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1%;
-}i{
+}.persona{
     background-color: var(--Magenta);
-    font-size: 2rem;
-    border-radius: 50%;
     width: 50px;
     height: 50px;
-    text-align: center;
-    display: flex;
-    align-items: center;
     margin-bottom: 1rem;
     margin-top: 2rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
 }.iniciosesion{
     display: flex;
     flex-direction: column;
@@ -77,6 +76,9 @@ body{
     margin-bottom: 1rem;
     border-radius: 2px;
     box-shadow: 0px 1px rgba(97, 97, 97,500);
+}#boton a{
+    text-decoration: none;
+    color: var(--blanco);
 }p a{
     text-decoration: none;
     color: var(--negro2);
