--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,31 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-:root{
-  --azulclaro: #48D6ED;
-  --azuloscuro: #337AB7;
-  --azulnegro: #303342;
-  --negro: #333333;
-  --negro2: #000;
-  --gris: #B2B3B3;
-  --fondo: #FFFEFC;
-  --verdeazul: #157A8A;
-  --Magenta: #9C2759;
-  --blanco: #fff;
-  --degradado: linear-gradient(49.54deg, #337AB7 2.89%, #0B3860 80.34%);
-}
- 
-*{
-    margin:0;
-}
-body{
-    font-family: 'Marcellus', serif;
-    font-size: 16px;
-}
- 
-  h1,h2,h3,h4,h5{
-    font-family: 'Marcellus', serif;
+
+:root {
+      --azulclaro: #48D6ED;
+      --azuloscuro: #337AB7;
+      --azulnegro: #303342;
+      --negro: #333333;
+      --negro2: #000;
+      --gris: #B2B3B3;
+      --fondo: #FFFEFC;
+      --verdeazul: #157A8A;
+      --Magenta: #9C2759;
+      --blanco: #fff;
+      --degradado: linear-gradient(49.54deg, #337AB7 2.89%, #0B3860 80.34%);
 }
 
-nav{
+* {
+      margin: 0;
+}
+
+body {
+      font-family: 'Marcellus', serif;
+      font-size: 16px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+      font-family: 'Marcellus', serif;
+}
+
+nav {
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -33,74 +39,99 @@ nav{
       font-family: 'Marcellus', serif;
       font-size: 1.3em;
       padding: 1rem;
-}.item button{
+}
+
+.item button {
       color: white;
       font-size: 0.8em;
       border-radius: 10%;
       background-color: #337AB7;
       border: none;
       padding: 0.5rem;
-}nav a{
+}
+
+nav a {
       color: var(--blanco);
       text-decoration: none;
       padding: 1rem;
       transition: .5s all ease;
-      
-}nav a:hover{
-      background-color:#0B3860;
+
+}
+
+nav a:hover {
+      background-color: #0B3860;
       width: 100%;
 }
-.logo img{
-      height: 3rem;     
-}#features{
+
+.logo img {
+      height: 3rem;
+}
+
+#features {
       background: url(../img/index/bg-features.png);
       color: white;
       padding-top: 1rem;
-}.features-title{
+}
+
+.features-title {
       background-color: rgba(0, 0, 0, 0.342);
       text-align: center;
       padding: 0.5rem;
       font-size: 1.5rem;
-}.features-description{
+}
+
+.features-description {
       display: flex;
       flex-flow: row wrap;
       justify-content: space-around;
-}.feature{
+}
+
+.feature {
       width: 25%;
       min-width: 180px;
       max-width: 230px;
       margin: 0.8rem;
-      padding-top: 2rem;
-      padding-bottom: 2rem;
+      padding: 1rem;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       border-radius: 5px;
-}.feature i{
-      font-size: 2.5rem;
+}
+
+.feature i {
+      font-size: 2.2rem;
       margin-bottom: 1.5rem;
-}.feature p{
-      font-size: 1.2rem;
-}.feature-blue{
+}
+
+.feature-blue {
       background-color: rgba(9, 53, 104, 0.493);
-}.feature-black{
+}
+
+.feature-black {
       background-color: rgba(0, 0, 0, 0.699);
-}.logo{
+}
+
+.logo {
       background-color: #333333;
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 1rem;
 }
-.slider img{
+
+.slider img {
       width: 100%;
       height: 100%;
-}.contenido{
+}
+
+.contenido {
       width: 100%;
       height: 100%;
       position: relative;
-}#textosl p{
+}
+
+#textosl p {
       position: absolute;
       margin-top: -16%;
       font-family: 'Marcellus', serif;
@@ -114,43 +145,63 @@ nav{
       align-items: center;
       flex-flow: row wrap;
 
-}.informacion{
-      width: 100%;
-      height: 100%;  
-      display: flex;
-      justify-content: space-around;  
+}
 
-}.text-log{
+.informacion {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: space-around;
+
+}
+
+.text-log {
       margin: 2.5em;
       display: flex;
       justify-content: space-around;
       align-items: center;
-}#hijo1{
+}
+
+#texto-hijo {
       font-size: 1.1em;
       width: 45%;
-}#hijo img{
+}
+
+#logo-hijo img {
       width: 65%;
       height: 65%;
-}#hijo{     
+}
+
+#logo-hijo {
       display: flex;
       justify-content: center;
-}.tit h1{
+}
+
+.tit h1 {
       display: flex;
       justify-content: center;
       margin-top: 3%;
       font-size: 3em;
-}.mapa {
+}
+
+.mapa {
       display: flex;
       justify-content: center;
       padding: 1rem;
-}.mapa iframe{
+}
+
+.mapa iframe {
       width: 100%;
-}.direccion h3{
+}
+
+.direccion h3 {
 
       font-size: 1.5em;
       display: flex;
       justify-content: center;
-}.linea{
+}
+
+.linea {
       display: flex;
       justify-content: center;
       margin-left: 25%;
@@ -158,17 +209,24 @@ nav{
       background-color: #337AB7;
       width: 50%;
       height: 0.1em;
-      
-}.direccion{
+
+}
+
+.direccion {
       padding: 2em;
- }.titulo h1{
+}
+
+.titulo h1 {
       margin-bottom: 2%;
- }.footer-container{
+}
+
+.footer-container {
       background-color: var(--negro);
       color: white;
       padding: 2%;
 }
-.footer-container .text-footer{
+
+.footer-container .text-footer {
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -176,57 +234,80 @@ nav{
       height: 100%;
       width: 100%;
 }
-.texto1{
+
+.text.t {
       width: 25%;
 
-      
-}.icons{
+
+}
+
+.icons {
       display: flex;
       flex-wrap: nowrap;
       flex-direction: column;
-      
-      
-}.icons div{
-      display:flex;
+
+
+}
+
+.icons div {
+      display: flex;
       padding: 2%;
-      
-}.texto3{
+
+}
+
+.text t3 {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       flex-wrap: wrap;
       padding: 2%;
-      
-      
-}#separador{
+
+
+}
+
+#separador {
       margin-top: 21%;
-}.carrusel{
+}
+
+.carrusel {
       display: flex;
       justify-content: space-around;
       width: 100%;
 
-     color: white;
-}.carrusel img{
+      color: white;
+}
+
+.carrusel img {
       width: 100%;
       height: 100%;
       border-radius: 50%;
-      
-}.descripcion{
+
+}
+
+.lorem {
       height: 100%;
-}.icons p{
+}
+
+.icons p {
       margin-left: 2%;
-}#opinion img{
+}
+
+#card-contenedor img {
       width: 16%;
       height: 3.5em;
-}.encabezado{
+}
+
+.enc {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: flex-start;
-      background: url(/img/Group\ 200.svg);
+      background: url(../img/Group\ 200.svg);
       background-size: cover;
 
-}.titulo{
+}
+
+.titulo {
       font-size: 1.7em;
       display: flex;
       justify-content: center;
@@ -234,74 +315,90 @@ nav{
       align-items: center;
       color: white;
       height: 7em;
-      
- }.descripcion{
+
+}
+
+.lorem {
       position: relative;
       display: flex;
       align-items: center;
-      padding: 6%;
-      font-size: 1.3em;
+      padding: 3%;
       height: 7rem;
- }#opinion{
-   margin-top: -3%;
-   margin-bottom: 3%;
-   height: 100%;
-   width: 400px;
-   background: linear-gradient(49.54deg, #337AB7 6%, #0B3860 90.34%);
- }.encabezado img{
+}
+
+#card-contenedor {
+      margin-top: -3%;
+      margin-bottom: 3%;
+      height: 100%;
+      width: 32em;
+      background: linear-gradient(49.54deg, #337AB7 6%, #0B3860 90.34%);
+}
+
+.enc img {
       padding: 2%;
- }.estrellas{
+}
+
+.estrellas {
       display: flex;
       flex-direction: column;
       justify-content: center;
       padding: 3%;
- }.red{
-      margin-top: 3%;
-      font-size: 1.3em;
-      width: 50%; 
-      
+}
 
- }
+/* resolucion desktop*/
+@media screen and (min-width: 1280px)
 
- /* resolucion desktop*/
-    @media screen and (min-width: 1280px)/*la pantala debe ser minimo paraque se aplique*/ {
-      .logo i{
+/*la pantala debe ser minimo paraque se aplique*/
+      {
+      .logo i {
             display: none;
       }
-      .texto1 hr{
+
+      .text.t hr {
             display: none;
-      }.texto2 hr{
+      }
+
+      .text.t2 hr {
             display: none;
-      }.texto3 hr{
-        display: none;
-      }.descripcion{
+      }
+
+      .lorem {
             font-size: 1.3em;
-      }.features-title{
+      }
+
+      .features-title {
             font-size: 2em;
       }
-    }
+}
+
 /*Resolucion media tablet*/
 @media screen and (min-width: 769px) {
 
-      .logo i{
+      .logo i {
             display: none;
       }
-      .menu hr{
+
+      .menu_nav hr {
             display: none;
-      }.texto1 hr{
+      }
+
+      .text.t hr {
             display: none;
-      }.texto2 hr{
+      }
+
+      .text.t2 hr {
             display: none;
-      }.texto3 hr{
-        display: none;
-      }#opinion{
-            width: 30%;
+      }
+
+      #card-contenedor {
+            width: 25%;
+
       }
 }
+
+/* Resoluciòn Movile*/
 @media screen and (max-width: 768px) {
-      nav:hover .menu{
-            display: flex;
-        }.logo{
+      .logo {
             background-color: var(--negro2);
             display: flex;
             align-items: center;
@@ -309,97 +406,161 @@ nav{
             height: 100%;
             width: 100%;
             padding: 1%;
-        }
-        
-      .logo img{
-            width: 100%;
-          max-width: 200px;
       }
-      .logo i{
+
+      .logo img {
+            width: 100%;
+            max-width: 200px;
+      }
+
+      .logo i {
             color: var(--blanco);
             font-size: 2rem;
       }
-      .menu{
-            background-color: var(--negro2);
+
+      .menu_nav {
+            background-color: rgba(1, 10, 52, 0.838);
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;  
-        }.menu hr{
+            justify-content: center;
+
+      }
+
+      .menu_nav hr {
             width: 100%;
             background-color: var(--blanco);
-      }.item{
-            padding: 1rem;          
       }
-      nav a{
+
+      .item {
+            padding: 1rem;
             color: var(--blanco);
             text-decoration: none;
             text-align: center;
-        }
-        nav a:hover{
+
+      }
+
+      nav a {
+            color: var(--blanco);
+            text-decoration: none;
+            text-align: center;
+      }
+
+      nav a:hover {
             background-color: #0B3860;
             width: 100%;
-        }
-        .menu button{
+      }
+
+      .menu_nav.active {
+            display: flex;
+            padding: 0;
+            transform: translateY(0%);
+      }
+
+      .menu_nav button {
             padding: 1rem;
-            background-color:transparent;
+            background-color: transparent;
             border: none;
             border-radius: 3px;
             font-size: 1em;
             padding: 0.5rem;
             font-family: 'Marcellus', serif;
             color: var(--blanco);
-        }nav{
+      }
+
+      nav {
             display: flex;
             flex-direction: column;
-            padding: 1%;
-            background-color: #000;            
-        }.menu{
+            padding: 0%;
+            background-color: #000;
+            transition: .5s ease;
+
+      }
+
+      .menu_nav {
             display: none;
             width: 100%;
-        }#hijo{
+            transition: .5s ease;
+
+      }
+
+      #textosl {
+            font-size: 0.6rem;
+      }
+
+      #logo-hijo {
             display: none;
-        }#hijo1{
+      }
+
+      #texto-hijo {
             width: 100%;
-        }#textosl p{
-            font-size: 1em;
-        }.text-footer{
+      }
+
+      #textosl p {
+            font-size: 2em;
+      }
+
+      .text-footer {
             display: flex;
             flex-direction: column;
-        }.texto1{
+      }
+
+      .text.t {
             width: 100%;
-        }.texto2{
+      }
+
+      .text.t2 {
             width: 100%;
-        }.texto3{
+      }
+
+      .text.t3 {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             width: 100%;
-        }#separador{
+      }
+
+      #separador {
             margin-top: 0%;
-        }.inf{
+      }
+
+      .direccion {
             display: flex;
             flex-direction: column;
-           
+
             font-size: 0.8em;
-        }.linea{
+      }
+
+      .linea {
             width: 100%;
-            margin-left:0%;
-        }.titulo{
+            margin-left: 0%;
+      }
+
+      .titulo {
             height: 4em;
-        }.titulo h1{
+      }
+
+      .titulo h1 {
             font-size: 1em;
-        }.carrusel{
+      }
+
+      .carrusel {
             margin-left: -15%;
             width: 130%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-        }#opinion{
+      }
+
+      #card-contenedor {
             width: 30%;
-        }.descripcion{
-            font-size: 0.7em;
-        }.opiniones{
+      }
+
+      .lorem {
+            font-size: 0.9em;
+      }
+
+      .opiniones {
             overflow: hidden;
-        }
+      }
 }
