--- a/css/login.css
+++ b/css/login.css
@@ -51,7 +51,7 @@ body{
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-}.iniciosesion{
+}.form-login{
     display: flex;
     flex-direction: column;
     margin-bottom: 12px;
@@ -133,7 +133,7 @@ body{
         align-items: center;
         margin-bottom: 1rem;
         margin-top: 2rem;
-    }.iniciosesion{
+    }.form-login{
         display: flex;
         flex-direction: column;
         margin-bottom: 12px;
@@ -200,7 +200,7 @@ body{
         align-items: center;
         margin-bottom: 1rem;
         margin-top: 2rem;
-    }.iniciosesion{
+    }.form-login{
         display: flex;
         flex-direction: column;
         margin-bottom: 12px;
