--- a/css/registro.css
+++ b/css/registro.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Roboto:wght@300&display=swap');
-:root{
-      
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
+:root {
     --azulclaro: #48D6ED;
     --azuloscuro: #337AB7;
     --azulnegro: #303342;
     --negro: #333333;
-    --negro2: #000;
+    --negro2: #000; 
     --gris: #B2B3B3;
     --fondo: #FFFEFC;
     --verdeazul: #157A8A;
@@ -13,183 +14,540 @@
     --blanco: #fff;
     --degradado: linear-gradient(49.54deg, #337AB7 2.89%, #0B3860 80.34%);
 }
-*{
-    margin:0;
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+
 }
-body{
+
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-family: 'Marcellus', serif;
-    font-size: 16px;
 }
- 
-  h1,h2,h3,h4,h5{
-    font-family: 'Marcellus', serif;
-}#container-grid{
-    background:url(../img/registro-fondo.jpeg);
-    background-size: cover;
-    display: grid;
-    grid-template-columns:  repeat(30, 1fr); 
-    grid-template-rows: repeat(51, 19.75px);
-   
-}.logo{
-    background-color: #003564b0;
-    grid-column: 1/9;
-    grid-row: 1/52;
-}.formulario{
-    background-color: rgba(255, 255, 255, 0.651);
-    grid-column: 10/30;
-    grid-row: 3/ 50;
-    border-radius: 14px;
-}.img img{
-    width: 80%;
-    font-family: M;
-}
-.img{
-    margin-top: -12%;
-    color: white;
-    font-size: 3em;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}.bienvenido P{
-    font-size: 0.8em;
-    margin-top: 5%;
-    margin-left: 10%;
-    width: 80%;
- 
-}.formulario{
-    display: flex;
-    flex-direction: column; 
-}.tittle{
-    font-size: 2.5em;
-    display: flex;
-    justify-content: center;
-    margin-top: 4%;
-}.form{
-    margin-top: 2%;
-    font-size: 1.5em;
- 
-}.radio{
-    font-size: 0.9em;
-}.opciones{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}.doc{
-    display: flex;
-    justify-content: space-around;
-}.nom{
-    display: flex;
-    justify-content: space-around;
-}.dat{
-    display: flex;
-    justify-content: space-around;
-}.corre{
-    display: flex;
-    justify-content: space-around;
-}.orig{
-    display: flex;
-    justify-content: space-around;
-}.contra{
-    display: flex;
-    justify-content: space-around;
-}.terminos{
-    margin-top: 3%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}#inf{
-    width: 40%;
-    margin-top: 2%;
-    display: flex;
-    flex-direction: column;
-}#inf input, select{
-    margin-top: 2%;
-    height: 2.2em;
-}.terminos a{
-    font-size: 1.5em;
-    text-decoration: none;
-    color: black;
-    margin-bottom: 2%;
-}.terminos button{
-    font-size: 0.9em;
-     width: 8em;
-    height: 2em;
-    color: #FFFEFC;
-    background-color: #000;
-}.text{
-    display: none;
-}
-/*movil*/
-@media screen and (min-width: 320px) and (max-width: 620px){
-   
-    .logo{
-        background-color: #05498579;
-        grid-column: 1/51;
-        grid-row: 3/10;
-    }.formulario{
-        grid-column: 2/30;
-        grid-row: 11/53;
-    }.img{
-        margin-top: 0%;
+
+
+@media screen and (min-width: 320px) {
+    body{
+        background-image: url(../img/registro-fondo.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+    }
+
+    nav {
+        display: flex;
+        width: 22em;
+        height: 100%;
+        flex-direction: column;
+        background: linear-gradient(49.54deg, rgba(69, 162, 243, 0.863) 2.89%, rgba(6, 55, 99, 0.89) 80.34%);
+        align-items: center;
+        color: var(--blanco);
+        margin-top: 8%;
+    }
+
+    nav img {
+        width: 35%;
+        padding-top: 5%;
+    }
+
+    nav h1 {
+        padding: 2%;
+        font-size: 2em;
+        margin-left: 0em;
+        text-align: center;
+        /* padding-bottom: 100%; */
+    }
+
+    .lateralFormulario {
+        background-color: rgba(255, 255, 255, 0.767);
+        margin: 1em;
+        padding: 1em;
+        width: 80%;
+        font-size: 1.2em;
+        border-radius: 5px;
+    }
+
+    .titulo {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding: 0em;
+        font-size: 1em;
+        letter-spacing: 2px;
+    }
+
+    form {
+        width: 100%;
+        margin: 1em;
+    }
+
+    form .formulario {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .columnasFormulario {
+        display: flex;
+        padding: 0 1em 0 0;
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .columnasFormulario input {
+        width: 90%;
+        padding: 0.5em;
+        margin: 0.5em 0 0.5em 0;
+        font-size: 1em;
+        border-radius: 5px;
+        border: 0;
+    }
+
+    .columnasFormulario select {
+        width: 95%;
+        padding: 0.5em;
+        margin: 0.5em 0 0.5em 0;
+        font-size: 1em;
+        border-radius: 5px;
+        border: 0;
+    }
+
+    .genero {
+        display: flex;
+        justify-content: flex-start;
+        justify-items: center;
+        margin: 1rem 0;
+    }
+
+    .genero input {
+        width: auto;
+        padding: 0%;
+        margin: 0%;
+        margin-right: 1em;
+    }
+
+    .genero label {
+        margin-right: 1rem;
+    }
+
+    .foto {
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+        margin-bottom: 5px;
+    }
+
+    #archivo {
+        color: var(--negro);
+        height: 1em;
+        width: 80%;
+        background-color: var(--fondo);
+        align-items: center;
+        justify-content: flex-start;
+        padding: 10px;
+        border-radius: 5px;
+        border: 0px;
+        margin: 5px;
+        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+    }
+
+    .foto input {
+        display: none;
+    }
+
+    .boton {
         display: flex;
         flex-direction: column;
         align-items: center;
-        
-    }.logo img{
-
-        width: 60%;
-    }.bienvenido{
-        display: none;
-    }.tittle{
-        font-size: 1.3em;
-    }.text{
-        margin-top: 1%;
-        display: flex;
-        font-size: 0.5em;
-    }.radio{
-        font-size: 1em;
-    }.doc{
-        display: flex;
-        flex-direction: column;
-    }.nom{
-        display: flex;
-        flex-direction: column;
-    }.dat{
-        display: flex;
-        flex-direction: column;
-    }.corre{
-        display: flex;
-        flex-direction: column;
-    }.orig{
-        display: flex;
-        flex-direction: column;
-    }.contra{
-        
-        display: flex;
-        flex-direction: column;
-    }#inf{
-        width: 80%;
-        margin-left: 10%;
-    }.form{
-        font-size: 1em;
-    }.terminos{
-        font-size: 0.8em;
+        justify-content: center;
+        margin-top: 2rem;
     }
+
+    .boton a {
+        width: 45%;
+        color: var(--blanco);
+        background-color: var(--negro2);
+        padding: 1em;
+        font-size: 1.2rem;
+        margin-top: 1rem;
+        border-radius: 5px;
+        border: 0;
+        text-decoration: none;
+        text-align: center;
+
+    }
+
+    /*MODAL*/
+    .modal {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.5);
+        transition: all 500ms ease;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    #checkModal:checked~.modal {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .contenedor {
+        width: 90%;
+        margin: auto;
+        background: #fff;
+        box-shadow: 1px 7px 25px rgba(0, 0, 0, 0.6);
+        transition: all 500ms ease;
+        position: relative;
+        transform: translateY(-30%);
+    }
+
+    #checkModal:checked~.modal .contenedor {
+        transform: translateY(0%);
+    }
+
+    .contenedor header {
+        padding: 10px;
+        background: linear-gradient(49.54deg, rgba(69, 162, 243, 0.863) 2.89%, rgba(6, 55, 99, 0.89) 80.34%);
+        color: #fff;
+        text-align: center;
+        font-size: 1em;
+        font-family: 'Playfair Display', serif;
+
+    }
+
+    .contenedor label {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: #fff;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+    .contenidoModal {
+        display: flex;
+        width: 100%;
+        padding: 10px;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .contenidoModal h3 {
+        margin-bottom: 10px;
+    }
+
+    .contenidoModal p {
+        padding: 1em;
+        font-size: 13px;
+    }
+
+    .contenidoModal button {
+        width: 35%;
+        height: 10%;
+        align-self: center;
+        color: var(--blanco);
+        background-color: var(--negro);
+        padding: 5px;
+        font-size: 1em;
+        margin-top: 1em;
+        border-radius: 3px;
+        border: 0;
+        font-family: 'Playfair Display', serif;
+    }
+
+
+    #checkModal{
+
+        padding: 1em;
+        margin-left: 0%;
+        margin-top: 2em;
+
+    }
+
+    .lbl-modal {
+        text-align: center;
+    }
+
+
+
 }
-/*portatil*/
-@media screen and (min-width: 621px) and (max-width:1024px) {
-    .bienvenido{
-        font-size: 0.7em;
-        margin-left: 5%;
-    }.tittle{
-        margin-top: 6%;
+
+/*DESKTOP----------------------------------------------------------*/
+
+
+
+@media screen and (min-width: 1024px) {
+    body {
+        background-image: url(../img/registro-fondo.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .lateral {
+        display: flex;
+        width: 45%;
+        height: 63.5em;
+        background: linear-gradient(49.54deg, rgba(69, 162, 243, 0.863) 2.89%, rgba(6, 55, 99, 0.89) 80.34%);
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        color: var(--blanco);
+        margin-top: 0%;
+    }
+
+    nav img {
+
+        width: 20rem;
+        padding-top: 0%;
+    }
+
+    nav h1 {
+        padding: 2em;
+        font-size: 3em;
+        text-align: center;
+        margin-left: 0%;
+        /* padding-bottom: 100%; */
+    }
+
+    .lateralFormulario {
+        background-color: rgba(255, 255, 255, 0.767);
+        margin: 3em;
+        padding: 2em;
+        width: 100%;
+        font-size: 1.2em;
+        border-radius: 5px;
+    }
+
+    .titulo {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding: 1rem;
+        font-size: 2.5rem;
+        letter-spacing: 2px;
+    }
+
+    form {
+        width: 100%;
+        margin: 1em;
+    }
+
+    form .formulario {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+    }
+
+    .columnasFormulario {
+        display: flex;
+        padding: 0 1em 0 0;
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .columnasFormulario input {
+        width: 90%;
+        padding: 0.5em;
+        margin: 0.5em 0 0.5em 0;
+        font-size: 1em;
+        border-radius: 5px;
+        border: 0;
+    }
+
+    .columnasFormulario select {
+        width: 95%;
+        padding: 0.5em;
+        margin: 0.5em 0 0.5em 0;
+        font-size: 1em;
+        border-radius: 5px;
+        border: 0;
+    }
+
+    .genero {
+        display: flex;
+        justify-content: flex-start;
+        justify-items: center;
+        margin: 1rem 0;
+    }
+
+    .genero input {
+        width: auto;
+        padding: 0%;
+        margin: 0%;
+        margin-right: 1rem;
+    }
+
+    .genero label {
+        margin-right: 1rem;
+    }
+
+    .foto {
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+        margin-bottom: 5px;
+    }
+
+    #archivo {
+        color: var(--negro);
+        height: 1em;
+        width: 80%;
+        background-color: var(--fondo);
+        align-items: center;
+        justify-content: flex-start;
+        padding: 10px;
+        border-radius: 5px;
+        border: 0px;
+        margin: 5px;
+        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+    }
+
+    .foto input {
+        display: none;
+    }
+
+
+
+    .boton {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 1em;
+    }
+
+    .boton a {
+        width: 30%;
+        color: var(--blanco);
+        background-color: var(--negro2);
+        padding: 1em;
+        font-size: 1.2rem;
+        margin-top: 1rem;
+        border-radius: 5px;
+        border: 0;
+        text-decoration: none;
+        text-align: center;
+
+    }
+
+
+    /*MODAL*/
+    .modal {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.5);
+        transition: all 500ms ease;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    #checkModal:checked~.modal {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .contenedor {
+        width: 35%;
+        margin: auto;
+        background: #fff;
+        box-shadow: 1px 7px 25px rgba(0, 0, 0, 0.6);
+        transition: all 500ms ease;
+        position: relative;
+        transform: translateY(-30%);
+    }
+
+    #checkModal:checked~.modal .contenedor {
+        transform: translateY(0%);
+    }
+
+    .contenedor header {
+        padding: 10px;
+        background: linear-gradient(49.54deg, rgba(69, 162, 243, 0.863) 2.89%, rgba(6, 55, 99, 0.89) 80.34%);
+        color: #fff;
+        text-align: center;
         font-size: 2em;
-    }.form{
-        margin-top: 7%;
-    }.terminos{
-        margin-top: 5%;
+        font-family: 'Playfair Display', serif;
+
+    }
+
+    .contenedor label {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: #fff;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+    .contenidoModal {
+        display: flex;
+        width: 100%;
+        padding: 10px;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .contenidoModal h3 {
+        margin-bottom: 10px;
+    }
+
+    .contenidoModal p {
+        padding: 1em;
+        font-size: 18px;
+    }
+
+    .contenidoModal button {
+        width: 35%;
+        height: 10%;
+        align-self: center;
+        color: var(--blanco);
+        background-color: var(--negro);
+        padding: 5px;
+        font-size: 1em;
+        margin-top: 1em;
+        border-radius: 3px;
+        border: 0;
+        font-family: 'Playfair Display', serif;
+    }
+
+
+    #checkModal{
+
+        padding: 1em;
+        margin-left: 35%;
+        margin-top: 2em;
+
+    }
+
+    .lbl-modal {
+        text-align: center;
     }
 
 }
